---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-fail-todo/ops.arc
---
[-- Found 1 errors --],
error: Type mismatch
   ┌─ /home/klas/Workspace/arc/arc-script/arc-script-test/insta/src/expect-fail-todo/ops.arc:17:8
   │
17 │     -- 1 as f32;
   │        ^ f32 != i32


